--- a/.env
+++ b/.env
@@ -1,14 +1,11 @@
 PORT=3000
 NODE_ENV=development
 
-BASE_URL=http://localhost:3000
+BASE_URL=https://historicalsites.onrender.com
 
-#database
-#DB_PASSWORD=dSqr2S5qskQhq3DJ
-#DB_USER=esraaelrassas
-#DB_NAME=Egypatian-Historical-Sites
 
-DB_URI=mongodb+srv://esraaelrassas:dSqr2S5qskQhq3DJ@cluster0.p80cgix.mongodb.net/Egypatian-Historical-Sites?retryWrites=true&w=majority
+
+DB_URI=mongodb+srv://esraaelrassas:dSqr2S5qskQhq3DJ@cluster0.p80cgix.mongodb.net/Kemet-App?retryWrites=true&w=majority
 
 
 #to test development mode write in terminal :  set NODE_ENV=development then write npm run start:dev
@@ -22,5 +19,8 @@ JWT_EXPIRE_TIME=90d
 
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=465
-EMAIL_USER=esraaalrassas@gmail.com
-EMAIL_PASSWORD=sisvceobisbfuknk 
+EMAIL_USER=esraaomar71099@gmail.com
+EMAIL_PASSWORD=xgvhjjtbwtfumbwv
+ 
+
+
