Your commit message here

--- a/.env
+++ b/.env
@@ -1,16 +1,12 @@
 PORT=3000
 NODE_ENV=development
 
-BASE_URL=https://historicalsites.onrender.com
+BASE_URL=http://localhost:3000
 
 
 
 DB_URI=mongodb+srv://esraaelrassas:dSqr2S5qskQhq3DJ@cluster0.p80cgix.mongodb.net/Kemet-App?retryWrites=true&w=majority
 
-
-#to test development mode write in terminal :  set NODE_ENV=development then write npm run start:dev
-#to test production mode write in terminal :   set NODE_ENV=production then write npm run start:prod
-#to run project : nodemon index.js or node index.js 
 
 
 JWT_SECRET_KEY=the-secret-key-is-iti
